[PPANTT-120] fix: Spring cloud version and generate openapi
